fix: mermaid pre element stretching page width
When JavaScript is disabled, mermiad pre element can go overly wide

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,3 +58,7 @@ hr {
 details summary {
   font-weight: bold;
 }
+
+pre {
+  overflow-x: auto;
+}
